# PyCeleX5

./: CMakeLists.txt  README.md  README_zh-Hans.md  cfg_mp  cfg_mp_wire  demo.py  main.py
src/: binfileobserver.cpp  binfileobserver.h  main.cpp  pycelex5.cpp  pycelex5.h
